idf_component_register(SRCS "RB19.cpp"
                            "services/kinematics.cpp"
                            "services/steering.cpp"
                            "apps/car_app/car_line_following.cpp"
                            "../ports/esp32/src/esp32_bsp.cpp"
                            "../ports/esp32/src/drivers/actuators/dc_motor/esp32_dc_motor_l298n.cpp"
                            "../ports/esp32/src/drivers/actuators/dc_motor/esp32_dc_motor_ft_smc.cpp"
                            "../ports/esp32/src/drivers/sensors/infrared_sensor/esp32_infrared5channel.cpp"
                            "../ports/esp32/src/services/car.cpp"
                    INCLUDE_DIRS "."
                                "../include"
                                "../include/bsp"
                                "../include/bsp/drivers/actuators"
                                "../include/bsp/drivers/sensors"
                                "../include/apps/car_app"
                                "../include/services/kinematics"
                                "../include/services/steering"
                                "../include/services/car_controller"
                                "../ports/esp32/include/drivers/actuators/dc_motor"
                                "../ports/esp32/include/drivers/sensors/infrared_sensor")
